@@ -1730,17 +1730,15 @@ if passed to `skip-chars-forward' or `skip-chars-backward'.
 Ranges and carets are not treated specially.  This implementation is
 in Lisp; do not use it in performance-critical code."
   (let ((list (delete-duplicates (string-to-list string) :test #'=)))
-    (when (equal list '((?- ?\[) (?\[ ?\-)))
-      (error 'invalid-argument
-	     "Cannot create `skip-chars-forward' arg from string"
-	     string))
-    (when (memq ?\] list)
-      (setq list (cons ?\] (delq ?\] list))))
-    (when (eq ?^ (car list))
-      (setq list (nconc (cdr list) '(?^))))
-    (when (memq ?- list)
-      (setq list (delq ?- list)
-	    list (nconc list (list (second list) ?- (second list) ?-))))
+    (when (/= 1 (length list)) ;; No quoting needed in a string of length 1.
+      (when (eq ?^ (car list))
+        (setq list (nconc (cdr list) '(?^))))
+      (when (memq ?\\ list)
+        (setq list (delq ?\\ list)
+              list (nconc (list ?\\ ?\\) list)))
+      (when (memq ?- list)
+        (setq list (delq ?- list)
+              list (nconc list '(?\\ ?-)))))
     (apply #'string list)))
 
 ;;; subr.el ends here
